# tp2022

./: README.md
lol/task4/tests/test_01/: test_get_month_days.py
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: .CMakeLists.txt.swp  CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp
task3/: CMakeLists.txt
task4/tests/test_01/: test_add.py  test_get_month_days.py  test_leap.py
